feat: separate table group from order table